test-suite/tests/ui/states/invalid/duplicate_assign.stderr
error: state is already assigned
 --> tests/ui/states/invalid/duplicate_assign.rs:8:24
  |
8 |     #[stated(assign(A, A))]
  |                        ^
